	* fix hanging issue when closing files on windows (completing a download)
	* fix piece picking edge case that could cause torrents to get stuck at hash failure
	* try unencrypted connections first, and fall back to encryption if it fails (performance improvement)
	* add missing functions to python binding (flush_cache(), remap_files() and orig_files())
	* improve handling of filenames that are invalid on windows
	* support 'implied_port' in DHT announce_peer
	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)

0.16.9 release

	* fix long filename truncation on windows
	* distinguish file open mode when checking files and downloading/seeding with bittorrent. updates storage interface
	* improve file_storage::map_file when dealing with invalid input
	* improve handling of invalid utf-8 sequences in strings in torrent files
	* handle more cases of broken .torrent files
	* fix bug filename collision resolver
	* fix bug in filename utf-8 verification
	* make need_save_resume() a bit more robust
	* fixed sparse flag manipulation on windows
	* fixed streaming piece picking issue

0.16.8 release

	* make rename_file create missing directories for new filename
	* added missing python function: parse_magnet_uri
	* fix alerts.all_categories in python binding
	* fix torrent-abort issue which would cancel name lookups of other torrents
	* make torrent file parser reject invalid path elements earlier
	* fixed piece picker bug when using pad-files
	* fix read-piece response for cancelled deadline-pieces
	* fixed file priority vector-overrun
	* fix potential packet allocation alignment issue in utp
	* make 'close_redudnant_connections' cover more cases
	* set_piece_deadline() also unfilters the piece (if its priority is 0)
	* add work-around for bug in windows vista and earlier in GetOverlappedResult
	* fix traversal algorithm leak in DHT
	* fix string encoding conversions on windows