@@ -44,14 +44,14 @@ namespace libtorrent
 	{
 		if (!handle.is_valid()) return "";
 
-		char ret[1024];
+		char ret[2048];
 		sha1_hash const& ih = handle.info_hash();
 		int num_chars = snprintf(ret, sizeof(ret), "magnet:?xt=urn:btih:%s"
 			, base32encode(std::string((char const*)&ih[0], 20)).c_str());
 
 		std::string name = handle.name();
 
-		if (!name.empty())
+		if (!name.empty() && sizeof(ret) - 5 > num_chars)
 			num_chars += snprintf(ret + num_chars, sizeof(ret) - num_chars, "&dn=%s"
 				, escape_string(name.c_str(), name.length()).c_str());
 
@@ -59,6 +59,7 @@ namespace libtorrent
 
 		for (std::vector<announce_entry>::const_iterator i = tr.begin(), end(tr.end()); i != end; ++i)
 		{
+			if (num_chars >= sizeof(ret)) break;
 			num_chars += snprintf(ret + num_chars, sizeof(ret) - num_chars, "&tr=%s"
 				, escape_string(i->url.c_str(), i->url.length()).c_str());
 		}
@@ -68,20 +69,21 @@ namespace libtorrent
 
 	std::string make_magnet_uri(torrent_info const& info)
 	{
-		char ret[1024];
+		char ret[2048];
 		sha1_hash const& ih = info.info_hash();
 		int num_chars = snprintf(ret, sizeof(ret), "magnet:?xt=urn:btih:%s"
 			, base32encode(std::string((char*)&ih[0], 20)).c_str());
 
 		std::string const& name = info.name();
 
-		if (!name.empty())
+		if (!name.empty() && sizeof(ret) - 5 > num_chars)
 			num_chars += snprintf(ret + num_chars, sizeof(ret) - num_chars, "&dn=%s"
 				, escape_string(name.c_str(), name.length()).c_str());
 
 		std::vector<announce_entry> const& tr = info.trackers();
 		for (std::vector<announce_entry>::const_iterator i = tr.begin(), end(tr.end()); i != end; ++i)
 		{
+			if (num_chars >= sizeof(ret)) break;
 			num_chars += snprintf(ret + num_chars, sizeof(ret) - num_chars, "&tr=%s"
 				, escape_string(i->url.c_str(), i->url.length()).c_str());
 		}
